# miage

./: .env  compose.yml  db.json
bot/: Dockerfile  pyproject.toml
bot/src/: main.py
bot/src/cogs/: develop.py  voice.py
bot/src/lib/: bep-eng.dic  blacklist.py  test.py  voicevox.py
