[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord = {extras = ["voice"], version = "^2.3.2"}
ja-ginza = "^5.1.3"
pynacl = "^1.5.0"
python-dotenv = "^1.0.1"
pymongo = "^4.6.2"
tinydb = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
